Finish add patient

--- a/Hospital websites/my-hospital/src/login.css
+++ b/Hospital websites/my-hospital/src/login.css
@@ -9,6 +9,9 @@
   filter: grayscale(30%);
   justify-content: center;
 }
+.LoginContainer > h2 {
+  color: #ffc500;
+}
 .FormContainer {
   width: 300px;
   height: fit-content;
