--- a/Hospital websites/my-hospital/src/HomePage.css
+++ b/Hospital websites/my-hospital/src/HomePage.css
@@ -2,7 +2,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: url("https://cdn.pixabay.com/photo/2017/08/07/20/05/doctors-2607295_960_720.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+.HomePage > h1 {
+  font-size: 2.5rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 .fourbuttons > button {
-  margin: 10px;
+  font-size: 1.4rem;
+  border: none;
+  background: #70a7db;
+  color: #fff;
+  transition: 0.2s ease-out;
+  margin: 5px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  border-radius: 3px;
+  height: 4rem;
+}
+.fourbuttons > button:hover {
+  background: #ffc500;
+  transition: 0.2s ease-out;
+  cursor: pointer;
+  color: #000;
 }
