--- a/Hospital websites/my-hospital/src/AddIP.css
+++ b/Hospital websites/my-hospital/src/AddIP.css
@@ -1,16 +1,14 @@
-.AddPatientPage1 {
+.AddPatientPage {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
   width: auto;
-  height: 100vh;
+  height: 100%;
   background: url("https://images.unsplash.com/photo-1602595688238-9fffe12d5af3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1171&q=80");
-  background-size: cover;
-  background-position: center;
   width: 100%;
 }
-.AddPatientPage1 > h1 {
+.AddPatientPage > h1 {
   font-size: 2.5 rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
