--- a/Hospital websites/my-hospital/src/HomePage.css
+++ b/Hospital websites/my-hospital/src/HomePage.css
@@ -30,3 +30,33 @@
   cursor: pointer;
   color: #000;
 }
+.Navigate {
+  display: flex;
+  flex-direction: row;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-content: center;
+  width: 100vw;
+  overflow: hidden;
+}
+.Navigate > button {
+  font-size: 1.4rem;
+  border: none;
+  background: #6d7d8b;
+  color: #fff;
+  transition: 0.2s ease-out;
+  margin: 5px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  border-radius: 3px;
+  height: 2.5rem;
+  position: absolute;
+  right: 2%;
+}
+.Navigate > button:hover {
+  background: #ffc500;
+  transition: 0.2s ease-out;
+  cursor: pointer;
+  color: #000;
+}
